--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID"
+      apiKey: "AIzaSyBf6HVZWz4mH8AAcLyQwMTLdMz0039l1PE",
+      authDomain: "individual-nfc.firebaseapp.com",
+      projectId: "individual-nfc",
+      storageBucket: "individual-nfc.firebaseapp.com",
+      messagingSenderId: "127385211914",
+      appId: "1:127385211914:web:a1ff1a070820e5830ffbf3",
+      measurementId: "G-M4B4Q7TJ4D"
     };
 
     // Initialize Firebase
