--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
   <style>
+    /* Your existing styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -26,40 +27,14 @@
       background-color: #e8f0fe; /* Soft blue background */
       color: #333;
     }
-    .container {
-      width: 100%;
-      max-width: 500px;
-      background-color: #ffffff;
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s;
-    }
-    .container:hover {
-      transform: translateY(-5px);
-    }
-    h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #1a73e8; /* Google blue */
-    }
-    #loginForm {
-      display: flex;
-      flex-direction: column;
-    }
-    input {
-      padding: 12px;
-      margin-bottom: 15px;
-      border: 1px solid #d1d5db;
-      border-radius: 8px;
+    /* Additional styling for the link or button */
+    .redirect-link {
+      margin-top: 20px;
       font-size: 16px;
-      outline: none;
-      transition: border-color 0.3s;
+      color: #1a73e8;
+      text-decoration: none;
     }
-    input:focus {
-      border-color: #1a73e8;
-    }
-    button {
+    .redirect-button {
       padding: 12px;
       background-color: #1a73e8;
       color: #ffffff;
@@ -69,33 +44,14 @@
       cursor: pointer;
       transition: background-color 0.3s;
     }
-    button:hover {
+    .redirect-button:hover {
       background-color: #155ab3;
-    }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
-      border-radius: 8px;
-      margin-top: 20px;
-    }
-    #logoutBtn {
-      padding: 10px;
-      background-color: #d32f2f;
-      color: #ffffff;
-      font-size: 14px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      margin-top: 10px;
-    }
-    #logoutBtn:hover {
-      background-color: #b71c1c;
     }
   </style>
 </head>
 <body>
+  <!-- Your existing HTML structure -->
+
   <!-- Login Section -->
   <div id="loginSection" class="container">
     <h1>Login to View PDF</h1>
@@ -104,6 +60,10 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
+    <!-- Redirect Link -->
+    <a href="https://nfc-tagged-aircraft-maintenance-m-git-ec3670-shukai28s-projects.vercel.app/index.html" class="redirect-link">Go to NFC-Tagged Aircraft Maintenance Manuals</a>
+    <!-- OR a Redirect Button -->
+    <button class="redirect-button" onclick="window.location.href='https://nfc-tagged-aircraft-maintenance-m-git-ec3670-shukai28s-projects.vercel.app/index.html'">Visit NFC Manuals Page</button>
   </div>
 
   <!-- PDF Viewer Section -->
@@ -114,20 +74,20 @@
   </div>
 
   <script type="module">
-    // Firebase configuration
+    // Your existing Firebase configuration and script
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyBf6HVZWz4mH8AAcLyQwMTLdMz0039l1PE",
-      authDomain: "individual-nfc.firebaseapp.com",
-      projectId: "individual-nfc",
-      storageBucket: "individual-nfc.firebaseapp.com",
-      messagingSenderId: "127385211914",
-      appId: "1:127385211914:web:a1ff1a070820e5830ffbf3",
-      measurementId: "G-M4B4Q7TJ4D"
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_AUTH_DOMAIN",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_STORAGE_BUCKET",
+      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
     };
-    
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
