--- a/index.html
+++ b/index.html
@@ -27,12 +27,72 @@
       background-color: #e8f0fe; /* Soft blue background */
       color: #333;
     }
-    /* Additional styling for the link or button */
-    .redirect-link {
-      margin-top: 20px;
+    .container {
+      width: 100%;
+      max-width: 500px;
+      background-color: #ffffff;
+      border-radius: 12px;
+      padding: 25px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    }
+    .container:hover {
+      transform: translateY(-5px);
+    }
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #1a73e8; /* Google blue */
+    }
+    #loginForm {
+      display: flex;
+      flex-direction: column;
+    }
+    input {
+      padding: 12px;
+      margin-bottom: 15px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
       font-size: 16px;
-      color: #1a73e8;
-      text-decoration: none;
+      outline: none;
+      transition: border-color 0.3s;
+    }
+    input:focus {
+      border-color: #1a73e8;
+    }
+    button {
+      padding: 12px;
+      background-color: #1a73e8;
+      color: #ffffff;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: #155ab3;
+    }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 8px;
+      margin-top: 20px;
+    }
+    #logoutBtn {
+      padding: 10px;
+      background-color: #d32f2f;
+      color: #ffffff;
+      font-size: 14px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin-top: 10px;
+    }
+    #logoutBtn:hover {
+      background-color: #b71c1c;
     }
     .redirect-button {
       padding: 12px;
@@ -43,6 +103,7 @@
       border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s;
+      margin-top: 20px;
     }
     .redirect-button:hover {
       background-color: #155ab3;
@@ -50,8 +111,6 @@
   </style>
 </head>
 <body>
-  <!-- Your existing HTML structure -->
-
   <!-- Login Section -->
   <div id="loginSection" class="container">
     <h1>Login to View PDF</h1>
@@ -60,21 +119,21 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <!-- Redirect Link -->
-    <a href="https://nfc-tagged-aircraft-maintenance-m-git-ec3670-shukai28s-projects.vercel.app/index.html" class="redirect-link">Go to NFC-Tagged Aircraft Maintenance Manuals</a>
-    <!-- OR a Redirect Button -->
+    <!-- Redirect Button before login -->
     <button class="redirect-button" onclick="window.location.href='https://nfc-tagged-aircraft-maintenance-m-git-ec3670-shukai28s-projects.vercel.app/index.html'">Visit NFC Manuals Page</button>
   </div>
 
-  <!-- PDF Viewer Section -->
+  <!-- PDF Viewer Section after login -->
   <div id="pdfViewer" class="container" style="display: none;">
     <h1>PDF Viewer</h1>
     <iframe src="52___090-1-600.pdf"></iframe>
     <button id="logoutBtn">Logout</button>
+    <!-- Redirect Button after login -->
+    <button class="redirect-button" onclick="window.location.href='https://nfc-tagged-aircraft-maintenance-m-git-ec3670-shukai28s-projects.vercel.app/index.html'">Visit NFC Manuals Page</button>
   </div>
 
   <script type="module">
-    // Your existing Firebase configuration and script
+    // Firebase configuration
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
 
@@ -87,6 +146,7 @@
       appId: "1:127385211914:web:a1ff1a070820e5830ffbf3",
       measurementId: "G-M4B4Q7TJ4D"
     };
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
