--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
   <!-- Image Viewer Section after login -->
   <div id="imageViewer" class="container" style="display: none;">
     <h1>Image Viewer</h1>
-    <img src="/mnt/data/1 of 6.png" alt="Image 1">
-    <img src="/mnt/data/2 of 6.png" alt="Image 2">
-    <img src="/mnt/data/3 of 6.png" alt="Image 3">
-    <img src="/mnt/data/6 of 6.png" alt="Image 6">
+    <img src="1 of 6.png" alt="Image 1">
+    <img src="2 of 6.png" alt="Image 2">
+    <img src="3 of 6.png" alt="Image 3">
+    <img src="6 of 6.png" alt="Image 6">
     <button id="logoutBtn">Logout</button>
     <!-- Redirect Button after login -->
     <button class="redirect-button" onclick="window.location.href='https://nfc-tagged-aircraft-maintenance-m-git-ec3670-shukai28s-projects.vercel.app/index.html'">Visit NFC Manuals Page</button>
