--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <!-- Image Viewer Section after login -->
   <div id="imageViewer" class="container" style="display: none;">
     <h1>Image Viewer</h1>
-    <img src="1 of 6.png" alt="Image 1">
+    <img src="1 of 6.png">
     <img src="2 of 6.png" alt="Image 2">
     <img src="3 of 6.png" alt="Image 3">
     <img src="6 of 6.png" alt="Image 6">
