--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
   <div id="imageViewer" class="container" style="display: none;">
     <h1>Image Viewer</h1>
     <img src="1 of 6.png">
-    <img src="2 of 6.png" alt="Image 2">
-    <img src="3 of 6.png" alt="Image 3">
+    <img src="2 of 6.png">
+    <img src="3 of 6.png" alt="Image 2">
+    <img src="4 of 6.png" alt="Image 3">
+    <img src="5 of 6.png" alt="Image 3">
     <img src="6 of 6.png" alt="Image 6">
     <button id="logoutBtn">Logout</button>
     <!-- Redirect Button after login -->
